[package]
name = "rtc"
version = "0.0.1"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2018"
description = "A pure Rust implementation of WebRTC"
license = "MIT"
documentation = "https://docs.rs/rtc"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/rtc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
